Todo Lsit project

--- a/Hawaii Project/styles/styles.css
+++ b/Hawaii Project/styles/styles.css
@@ -29,8 +29,8 @@ header {
   top: 0;
   z-index: 5;
   background-color: white;
-  -webkit-box-shadow: 3px 3px 5px 1px #6b6b6b;
-          box-shadow: 3px 3px 5px 1px #6b6b6b;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 header div.logo {
