--- a/Hawaii Project/styles/styles.scss
+++ b/Hawaii Project/styles/styles.scss
@@ -22,8 +22,8 @@ header {
     top: 0;
     z-index: 5;
     background-color: white;
-    box-shadow: 3px 3px 5px 1px rgb(107, 107, 107);
-
+    // box-shadow: 3px 3px 5px 1px rgb(107, 107, 107);
+    transition: all 0.5s ease;
     div.logo {
         display: flex;
         align-items: center;
