--- a/Taiwan Project/styles/styles.scss
+++ b/Taiwan Project/styles/styles.scss
@@ -56,6 +56,9 @@ main {
 	display: flex;
 	flex-wrap: wrap;
 
+	p {
+		display: flex;
+	}
 	section {
 		padding: 1.5rem;
 	}
@@ -106,7 +109,38 @@ main {
 			font-size: 1.5rem;
 		}
 	}
+
 	section.industrial {
+		h2 {
+			display: flex;
+			justify-content: center;
+			padding: 1rem 0rem;
+			font-size: 2.5rem;
+		}
+
+		div.boxIndustrial {
+			height: 50vh;
+			display: flex;
+			div {
+				justify-content: flex-start;
+				flex-wrap: wrap;
+				flex: 1 1 50%;
+				display: flex;
+				padding: 0.5rem 0rem;
+
+				h3 {
+					font-size: 1.5rem;
+					padding: 0.5rem 0.5rem;
+				}
+				p {
+					text-align: left;
+					padding: 0.5rem 0.25rem;
+				}
+			}
+		}
+	}
+
+	section.economyPicture {
 		width: 100%;
 		h2 {
 			display: flex;
@@ -126,18 +160,14 @@ main {
 				display: flex;
 				flex-direction: column;
 				text-align: center;
-				font-weight: bolder;
 				img {
-					padding: 1.5rem 2rem;
+					padding: 1rem 1.15rem;
 					transition: 0.2s;
 				}
 				img:hover {
 					transform: scale(1.2);
 				}
 			}
-		}
-		p {
-			display: flex;
 		}
 		ul {
 			display: flex;
@@ -152,6 +182,38 @@ main {
 			}
 		}
 	}
+	section.author {
+		display: flex;
+		div.authorRight {
+			width: 15%;
+			img {
+				width: 10vw;
+				height: 28vh;
+				border-radius: 50%;
+				padding: 1rem 0.15rem;
+
+				transition: 0.2s;
+			}
+			img:hover {
+				transform: scale(1.2);
+			}
+		}
+		div.authorLeft {
+			width: 85%;
+			h2 {
+				padding: 0.5rem 0rem;
+			}
+			p {
+				padding: 0.5rem 0rem;
+			}
+			h3 {
+				padding: 0.5rem 0rem;
+			}
+			ul {
+				padding: 0.5rem 1.5rem;
+			}
+		}
+	}
 }
 #curve_chart {
 	width: 100%;
@@ -159,6 +221,16 @@ main {
 }
 
 @media screen and (max-width: 800px) {
+	main {
+		section.economyPicture {
+			div.imgPicture {
+				padding: 0.5rem;
+				img.pocture1 {
+					padding: 0;
+				}
+			}
+		}
+	}
 	nav ul {
 		flex-direction: column;
 	}
@@ -166,15 +238,35 @@ main {
 @media screen and (max-width: 900px) {
 	main {
 		section.industrial {
+			div.boxIndustrial {
+				display: inline;
+			}
+		}
+
+		section.economyPicture {
 			div.imgPicture {
 				img.pocture1 {
-					padding: 0.5rem 0.2rem;
-					width: 8vw;
-					height: 8vh;
+					// padding: 0.5rem 0.2rem;
+					width: 10vw;
+					height: 10vh;
 				}
 				p {
 					font-size: 0.5rem;
 					font-weight: normal;
+				}
+			}
+		}
+		section.author {
+			flex-direction: column;
+			align-items: center;
+			div.authorRight {
+				width: 50%;
+				img {
+					justify-content: center;
+
+					padding: 0 1.5rem;
+					width: 10rem;
+					height: 8rem;
 				}
 			}
 		}
