--- a/Hawaii Project/styles/styles.css
+++ b/Hawaii Project/styles/styles.css
@@ -1,8 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Noto Sans TC", sans-serif;
 }
 
@@ -16,56 +15,34 @@ h6 {
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  align-items: center;
+  flex-wrap: wrap;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 5;
   background-color: white;
-  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-
 header div.logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 5;
-      -ms-flex: 5 1 400px;
-          flex: 5 1 400px;
+  align-items: center;
+  flex: 5 1 400px;
   margin-left: 2rem;
 }
-
 header div.logo img {
   height: 6vw;
   width: 6vw;
 }
-
 header nav {
-  -webkit-box-flex: 2;
-      -ms-flex: 2 1 400px;
-          flex: 2 1 400px;
+  flex: 2 1 400px;
 }
-
 header nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style-type: none;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 header nav ul li a {
   color: #0d724e;
   text-decoration: none;
@@ -73,35 +50,24 @@ header nav ul li a {
 }
 
 main section.backImage {
-  min-height: 90vh;
+  min-height: 87.4vh;
   width: 100%;
   background-image: url(../Pictures/pexels-photo-416676.jpeg);
   background-size: cover;
   background-position: center;
   position: relative;
   z-index: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   text-align: center;
 }
-
 main section.backImage h3 {
   font-size: 2.5rem;
   color: white;
   margin: 2rem 0rem;
 }
-
 main section.backImage button.start {
   background-color: #3c9494;
   padding: 0.75rem 1.5rem;
@@ -111,94 +77,290 @@ main section.backImage button.start {
   border-radius: 1rem;
   cursor: pointer;
 }
-
 main section.backImage div.filter {
   background-color: rgba(0, 0, 0, 0.2);
   width: 100%;
-  min-height: 90vh;
+  min-height: 87.4vh;
   position: absolute;
   top: 0;
   z-index: -1;
 }
-
-main section.second {
-  display: -webkit-box;
-  display: -ms-flexbox;
+main section.backImage .about_container {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin: 20px 0 80px;
+}
+main section.backImage .about_container .card {
+  width: 300px;
+  margin: 10px;
+  background-color: white;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
+}
+main section.backImage .about_container .card:hover .card_caption {
+  top: 50%;
+  transform: translateY(-50%);
+}
+main section.backImage .about_container .card:hover .card_image {
+  transform: scale(1.1);
+}
+main section.backImage .about_container .card:hover .card_thumb::after {
+  top: 0;
+}
+main section.backImage .about_container .card:hover .card_snippet .card_title {
+  margin: 20px 0;
+}
+main section.backImage .about_container .card .card_thumb {
+  position: relative;
+  max-height: 400px;
+  overflow: hidden;
+}
+main section.backImage .about_container .card .card_thumb::after {
+  position: absolute;
+  top: 0;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 100%, rgba(255, 255, 255, 0) 100%);
+  transition: 0.3s;
+}
+main section.backImage .about_container .card .card_image {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+}
+main section.backImage .about_container .card .card_caption {
+  position: absolute;
+  top: 140%;
+  z-index: 1;
+  padding: 0 20px;
+  color: white;
+  transform: translateY(-50%);
+  text-align: center;
+  transition: 0.5s;
+}
+main section.backImage .about_container .card .card_title {
+  font-family: "Playfair Display", serif;
+  text-shadow: 5px 1px 5px black;
+}
+main section.backImage .about_container .card .card_snippet {
+  font-family: "Playfair Display", serif;
+  line-height: 28px;
+  text-shadow: 5px 1px 5px black;
+}
+main section.backImage .login_box {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  padding: 70px 100px;
+}
+main section.backImage .login_box .text-center {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 23px;
+  margin: -50px 0 80px 0;
+  display: block;
   text-align: center;
 }
-
+main section.backImage .login_box .input-container {
+  position: relative;
+  margin-bottom: 25px;
+}
+main section.backImage .login_box .input-container label {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 16px;
+  color: #fff;
+  transition: all 0.5s ease-in-out;
+}
+main section.backImage .login_box .input-container input {
+  border: 0;
+  border-bottom: 1px solid #555;
+  background: transparent;
+  width: 100%;
+  padding: 8px 0 5px 0;
+  font-size: 16px;
+  color: #fff;
+}
+main section.backImage .login_box .input-container input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #e74c3c;
+}
+main section.backImage .login_box .btn {
+  color: #fff;
+  background-color: #e74c3c;
+  outline: none;
+  border: 0;
+  color: #fff;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  margin-top: 50px;
+  border-radius: 2px;
+  cursor: pointer;
+  position: relative;
+}
+main section.backImage .login_box .input-container input:focus ~ label,
+main section.backImage .login_box .input-container input:valid ~ label {
+  top: -12px;
+  font-size: 12px;
+}
+main section.backImage .contact {
+  width: 80%;
+  height: 100%;
+  background-color: rgba(34, 116, 128, 0.5);
+  /* Left contact page */
+  /* Begin Right Contact Page */
+  /* Location, Phone, Email Section */
+}
+main section.backImage .contact .section-header {
+  text-align: center;
+  margin: 0 auto;
+  padding: 40px 0;
+  font: 300 60px "Oswald", sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+}
+main section.backImage .contact .contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
+  max-width: 840px;
+}
+main section.backImage .contact .form-horizontal {
+  /*float: left;*/
+  max-width: 400px;
+  font-family: "Lato";
+  font-weight: 400;
+}
+main section.backImage .contact .form-control,
+main section.backImage .contact textarea {
+  max-width: 400px;
+  width: 350px;
+  background-color: rgba(34, 116, 128, 0.5);
+  color: #fff;
+  letter-spacing: 1px;
+}
+main section.backImage .contact .send-button {
+  margin-top: 15px;
+  height: 34px;
+  width: 400px;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+main section.backImage .contact .alt-send-button {
+  width: 100%;
+  height: 34px;
+  transition: all 0.3s ease-in-out;
+}
+main section.backImage .contact .send-text {
+  display: block;
+  width: 100%;
+  margin-top: 5px;
+  font: 700 12px "Lato", sans-serif;
+  letter-spacing: 2px;
+}
+main section.backImage .contact .alt-send-button:hover {
+  transform: translate3d(0px, -29px, 0px);
+}
+main section.backImage .contact .direct-contact-container {
+  max-width: 400px;
+}
+main section.backImage .contact .contact-list {
+  list-style-type: none;
+  padding-right: 20px;
+}
+main section.backImage .contact .list-item {
+  line-height: 4;
+  color: #aaa;
+}
+main section.backImage .contact .contact-text {
+  color: #bbb;
+}
+main section.backImage .contact .place {
+  width: 100vw;
+}
+main section.backImage .contact .phone {
+  width: 100vw;
+}
+main section.backImage .contact .gmail {
+  width: 100vw;
+}
+main section.backImage .contact .contact-text a {
+  color: #bbb;
+  text-decoration: none;
+  transition-duration: 0.2s;
+}
+main section.backImage .contact .contact-text a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+main section.backImage .contact .copyright {
+  font: 200 14px "Oswald", sans-serif;
+  color: rgb(0, 0, 0);
+  letter-spacing: 1px;
+  text-align: center;
+  margin-top: 1.5rem;
+}
+main section.backImage .contact hr {
+  border-color: rgba(255, 255, 255, 0.6);
+}
+main section.second {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 main section.second h2 {
   font-size: 2rem;
   margin: 2rem 0rem;
 }
-
 main section.second section.cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 80%;
   min-height: 80vh;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 main section.second section.cards div.card {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   padding: 1rem;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 300px;
-          flex: 1 1 300px;
+  flex: 1 1 300px;
 }
-
 main section.second section.cards div.card div.image-container {
   overflow: hidden;
   width: 15vw;
   height: 15vw;
   border-radius: 50%;
 }
-
 main section.second section.cards div.card div.image-container img {
-  margin: 1rem 0rem;
   width: 15vw;
   height: 15vw;
   border-radius: 50%;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-
 main section.second section.cards div.card div.image-container img:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
-
 main section.second section.cards div.card h4 {
   margin: 1rem 0rem;
   font-size: 2rem;
 }
-
 main section.second section.cards div.card p {
   font-size: 1.25rem;
 }
-
 main section.second section.cards div.card a {
   margin: 1rem 0rem;
   text-decoration: none;
@@ -211,60 +373,35 @@ main section.second section.cards div.card a {
 footer {
   background-color: #d6d6d6;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   min-height: 40vh;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 footer div.logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 5;
-      -ms-flex: 5 1 100px;
-          flex: 5 1 100px;
+  align-items: center;
+  flex: 5 1 100px;
   font-size: 1.5rem;
 }
-
 footer div.logo img {
   height: 8vw;
   width: 8vw;
 }
-
 footer nav {
   width: 50%;
 }
-
 footer nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style-type: none;
   width: 100%;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-
 footer nav ul li {
-  -ms-flex-preferred-size: 80px;
-      flex-basis: 80px;
+  flex-basis: 80px;
 }
-
 footer nav ul li a {
   color: #000;
   text-decoration: none;
@@ -272,39 +409,29 @@ footer nav ul li a {
   font-weight: 600;
   margin: 0rem 2rem;
 }
-
 footer div.logMedia {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 footer div.logMedia div.socialMedia {
   margin: 3rem 2.5rem;
 }
-
 footer div.logMedia div.socialMedia img {
   width: 5vw;
   height: 5vw;
 }
 
-/* Scrollbar setting */
-/* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #52abab;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #004d5f;
 }
@@ -314,8 +441,41 @@ footer div.logMedia div.socialMedia img {
     width: 40vw;
     height: 40vw;
   }
+  main section.backImage .about_container .card .card_caption {
+    top: 10%;
+    transform: translateY(10%);
+  }
+  main section.backImage .login_box .text-center {
+    font-size: 20px;
+  }
+  main section.backImage .contact {
+    /* Left contact page */
+  }
+  main section.backImage .contact .section-header {
+    padding: 1rem 0;
+    font-size: 1.5rem;
+  }
+  main section.backImage .contact .form-control,
+main section.backImage .contact textarea {
+    width: 40vw;
+  }
+  main section.backImage .contact .send-button {
+    width: 40vw;
+  }
+  main section.backImage .contact .list-item {
+    line-height: 2;
+    font-size: 0.5rem;
+    color: #aaa;
+  }
+  main section.backImage .contact .list-item img {
+    width: 4vw;
+    height: 4vw;
+  }
+  main section.backImage .contact .copyright {
+    font-size: 0.5rem;
+    margin-top: 0.5rem;
+  }
 }
-
 @media screen and (max-width: 550px) {
   header div.logo {
     margin-left: 0.5rem;
@@ -332,5 +492,4 @@ footer div.logMedia div.socialMedia img {
     width: 10vw;
     height: 10vw;
   }
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
