--- a/Hawaii Project/styles/styles.scss
+++ b/Hawaii Project/styles/styles.scss
@@ -1,8 +1,8 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Noto Sans TC", sans-serif;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Noto Sans TC", sans-serif;
 }
 
 h1,
@@ -11,266 +11,588 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: normal;
+	font-weight: normal;
 }
 
+// 標題
 header {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    position: sticky;
-    top: 0;
-    z-index: 5;
-    background-color: white;
-    // box-shadow: 3px 3px 5px 1px rgb(107, 107, 107);
-    transition: all 0.5s ease;
-    div.logo {
-        display: flex;
-        align-items: center;
-        flex: 5 1 400px;
-        margin-left: 2rem;
-        img {
-            height: 6vw;
-            width: 6vw;
-        }
-    }
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	position: sticky;
+	top: 0;
+	z-index: 5;
+	background-color: white;
+	transition: all 0.5s ease;
+	div.logo {
+		display: flex;
+		align-items: center;
+		flex: 5 1 400px;
+		margin-left: 2rem;
+		img {
+			height: 6vw;
+			width: 6vw;
+		}
+	}
 
-    nav {
-        flex: 2 1 400px;
-        ul {
-            display: flex;
-            list-style-type: none;
-            justify-content: space-around;
-            li {
-                a {
-                    color: #0d724e;
-                    text-decoration: none;
-                    font-size: 1.35rem;
-                }
-            }
-        }
-    }
+	nav {
+		flex: 2 1 400px;
+		ul {
+			display: flex;
+			list-style-type: none;
+			justify-content: space-around;
+			li {
+				a {
+					color: #0d724e;
+					text-decoration: none;
+					font-size: 1.35rem;
+				}
+			}
+		}
+	}
 }
 
+// 內容
 main {
-    section.backImage {
-        min-height: 90vh;
-        width: 100%;
-        background-image: url(../Pictures/pexels-photo-416676.jpeg);
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        z-index: 0;
+	section.backImage {
+		min-height: 87.4vh;
+		width: 100%;
+		background-image: url(../Pictures/pexels-photo-416676.jpeg);
+		background-size: cover;
+		background-position: center;
+		position: relative;
+		z-index: 0;
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		text-align: center;
 
-        h3 {
-            font-size: 2.5rem;
-            color: white;
-            margin: 2rem 0rem;
-        }
+		h3 {
+			font-size: 2.5rem;
+			color: white;
+			margin: 2rem 0rem;
+		}
 
-        button.start {
-            background-color: #3c9494;
-            padding: 0.75rem 1.5rem;
-            font-size: 1.5rem;
-            color: white;
-            border: none;
-            border-radius: 1rem;
-            cursor: pointer;
-        }
+		button.start {
+			background-color: #3c9494;
+			padding: 0.75rem 1.5rem;
+			font-size: 1.5rem;
+			color: white;
+			border: none;
+			border-radius: 1rem;
+			cursor: pointer;
+		}
 
-        div.filter {
-            background-color: rgba(0, 0, 0, 0.2);
-            width: 100%;
-            min-height: 90vh;
-            position: absolute;
-            top: 0;
-            z-index: -1;
-        }
-    }
+		div.filter {
+			background-color: rgba(0, 0, 0, 0.2);
+			width: 100%;
+			min-height: 87.4vh;
+			position: absolute;
+			top: 0;
+			z-index: -1;
+		}
 
-    section.second {
-        // min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
+		// 關於網頁
+		.about_container {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			width: 100%;
+			margin: 20px 0 80px;
 
-        h2 {
-            font-size: 2rem;
-            margin: 2rem 0rem;
-        }
+			.card {
+				width: 300px;
+				margin: 10px;
+				background-color: white;
+				box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
 
-        section.cards {
-            display: flex;
-            width: 80%;
-            min-height: 80vh;
-            flex-wrap: wrap;
+				&:hover {
+					.card_caption {
+						top: 50%;
+						transform: translateY(-50%);
+					}
 
-            div.card {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-around;
-                padding: 1rem;
-                flex: 1 1 300px;
-                div.image-container {
-                    overflow: hidden;
-                    width: 15vw;
-                    height: 15vw;
-                    border-radius: 50%;
-                    img {
-                        margin: 1rem 0rem;
-                        width: 15vw;
-                        height: 15vw;
-                        border-radius: 50%;
-                        transition: 0.2s;
-                    }
-                    img:hover {
-                        transform: scale(1.2);
-                    }
-                }
+					.card_image {
+						transform: scale(1.1);
+					}
 
-                h4 {
-                    margin: 1rem 0rem;
-                    font-size: 2rem;
-                }
-                p {
-                    font-size: 1.25rem;
-                }
-                a {
-                    margin: 1rem 0rem;
-                    text-decoration: none;
-                    padding: 1rem 1.5rem;
-                    background-color: #3c6671;
-                    color: white;
-                    font-size: 1.25rem;
-                }
-            }
-        }
-    }
+					.card_thumb {
+						&::after {
+							top: 0;
+						}
+					}
+
+					.card_snippet .card_title {
+						margin: 20px 0;
+					}
+				}
+
+				.card_thumb {
+					position: relative;
+					max-height: 400px;
+					overflow: hidden;
+
+					&::after {
+						position: absolute;
+						top: 0;
+						display: block;
+						content: "";
+						width: 100%;
+						height: 100%;
+						background: linear-gradient(
+							0deg,
+							rgba(0, 0, 0, 0.6) 100%,
+							rgba(255, 255, 255, 0) 100%
+						);
+						transition: 0.3s;
+					}
+				}
+
+				.card_image {
+					width: 100%;
+					height: 100%;
+					transition: 0.5s;
+				}
+
+				.card_caption {
+					position: absolute;
+					top: 140%;
+					z-index: 1;
+					padding: 0 20px;
+					color: white;
+					transform: translateY(-50%);
+					text-align: center;
+					transition: 0.5s;
+				}
+
+				.card_title {
+					font-family: "Playfair Display", serif;
+					text-shadow: 5px 1px 5px black;
+				}
+				.card_snippet {
+					font-family: "Playfair Display", serif;
+					line-height: 28px;
+					text-shadow: 5px 1px 5px black;
+				}
+			}
+		}
+
+		//登入
+		.login_box {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			background-color: rgba(0, 0, 0, 0.3);
+			border-radius: 3px;
+			padding: 70px 100px;
+			.text-center {
+				color: #fff;
+				text-transform: uppercase;
+				font-size: 23px;
+				margin: -50px 0 80px 0;
+				display: block;
+				text-align: center;
+			}
+			.input-container {
+				position: relative;
+				margin-bottom: 25px;
+			}
+			.input-container label {
+				position: absolute;
+				top: 0px;
+				left: 0px;
+				font-size: 16px;
+				color: #fff;
+				transition: all 0.5s ease-in-out;
+			}
+			.input-container input {
+				border: 0;
+				border-bottom: 1px solid #555;
+				background: transparent;
+				width: 100%;
+				padding: 8px 0 5px 0;
+				font-size: 16px;
+				color: #fff;
+			}
+			.input-container input:focus {
+				border: none;
+				outline: none;
+				border-bottom: 1px solid #e74c3c;
+			}
+			.btn {
+				color: #fff;
+				background-color: #e74c3c;
+				outline: none;
+				border: 0;
+				color: #fff;
+				padding: 10px 20px;
+				text-transform: uppercase;
+				margin-top: 50px;
+				border-radius: 2px;
+				cursor: pointer;
+				position: relative;
+			}
+
+			.input-container input:focus ~ label,
+			.input-container input:valid ~ label {
+				top: -12px;
+				font-size: 12px;
+			}
+		}
+
+		// 聯絡我們
+		.contact {
+			width: 80%;
+			height: 100%;
+			background-color: rgba($color: #227480, $alpha: 0.5);
+			.section-header {
+				text-align: center;
+				margin: 0 auto;
+				padding: 40px 0;
+				font: 300 60px "Oswald", sans-serif;
+				color: #fff;
+				text-transform: uppercase;
+				letter-spacing: 6px;
+			}
+			.contact-wrapper {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				margin: 0 auto;
+				padding: 20px;
+				position: relative;
+				max-width: 840px;
+			}
+			/* Left contact page */
+			.form-horizontal {
+				/*float: left;*/
+				max-width: 400px;
+				font-family: "Lato";
+				font-weight: 400;
+			}
+
+			.form-control,
+			textarea {
+				max-width: 400px;
+				width: 350px;
+				background-color: rgba($color: #227480, $alpha: 0.5);
+				color: #fff;
+				letter-spacing: 1px;
+			}
+
+			.send-button {
+				margin-top: 15px;
+				height: 34px;
+				width: 400px;
+				overflow: hidden;
+				transition: all 0.3s ease-in-out;
+			}
+
+			.alt-send-button {
+				width: 100%;
+				height: 34px;
+				transition: all 0.3s ease-in-out;
+			}
+
+			.send-text {
+				display: block;
+				width: 100%;
+				margin-top: 5px;
+				font: 700 12px "Lato", sans-serif;
+				letter-spacing: 2px;
+			}
+
+			.alt-send-button:hover {
+				transform: translate3d(0px, -29px, 0px);
+			}
+
+			// .send_icon {
+
+			// }
+
+			/* Begin Right Contact Page */
+			.direct-contact-container {
+				max-width: 400px;
+			}
+
+			/* Location, Phone, Email Section */
+			.contact-list {
+				list-style-type: none;
+				// width: 40vw;
+				padding-right: 20px;
+			}
+
+			.list-item {
+				line-height: 4;
+				color: #aaa;
+			}
+
+			.contact-text {
+				color: #bbb;
+			}
+
+			.place {
+				width: 100vw;
+			}
+
+			.phone {
+				width: 100vw;
+			}
+
+			.gmail {
+				width: 100vw;
+			}
+
+			.contact-text a {
+				color: #bbb;
+				text-decoration: none;
+				transition-duration: 0.2s;
+			}
+
+			.contact-text a:hover {
+				color: #fff;
+				text-decoration: none;
+			}
+
+			.copyright {
+				font: 200 14px "Oswald", sans-serif;
+				color: rgb(0, 0, 0);
+				letter-spacing: 1px;
+				text-align: center;
+				margin-top: 1.5rem;
+			}
+
+			hr {
+				border-color: rgba(255, 255, 255, 0.6);
+			}
+		}
+	}
+
+	section.second {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+
+		h2 {
+			font-size: 2rem;
+			margin: 2rem 0rem;
+		}
+
+		section.cards {
+			display: flex;
+			width: 80%;
+			min-height: 80vh;
+			flex-wrap: wrap;
+
+			div.card {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: space-around;
+				padding: 1rem;
+				flex: 1 1 300px;
+				div.image-container {
+					overflow: hidden;
+					width: 15vw;
+					height: 15vw;
+					border-radius: 50%;
+					img {
+						width: 15vw;
+						height: 15vw;
+						border-radius: 50%;
+						transition: 0.2s;
+					}
+					img:hover {
+						transform: scale(1.2);
+					}
+				}
+
+				h4 {
+					margin: 1rem 0rem;
+					font-size: 2rem;
+				}
+				p {
+					font-size: 1.25rem;
+				}
+				a {
+					margin: 1rem 0rem;
+					text-decoration: none;
+					padding: 1rem 1.5rem;
+					background-color: #3c6671;
+					color: white;
+					font-size: 1.25rem;
+				}
+			}
+		}
+	}
 }
 
 footer {
-    background-color: #d6d6d6;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 40vh;
-    justify-content: space-around;
+	background-color: #d6d6d6;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-height: 40vh;
+	justify-content: space-around;
 
-    div.logo {
-        display: flex;
-        align-items: center;
-        flex: 5 1 100px;
-        font-size: 1.5rem;
-        img {
-            height: 8vw;
-            width: 8vw;
-        }
-    }
+	div.logo {
+		display: flex;
+		align-items: center;
+		flex: 5 1 100px;
+		font-size: 1.5rem;
+		img {
+			height: 8vw;
+			width: 8vw;
+		}
+	}
 
-    nav {
-        width: 50%;
-        ul {
-            display: flex;
-            list-style-type: none;
-            width: 100%;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            li {
-                flex-basis: 80px;
-                a {
-                    color: #000;
-                    text-decoration: none;
-                    font-size: 1.35rem;
-                    font-weight: 600;
-                    margin: 0rem 2rem;
-                }
-            }
-        }
-    }
+	nav {
+		width: 50%;
+		ul {
+			display: flex;
+			list-style-type: none;
+			width: 100%;
+			justify-content: space-around;
+			flex-wrap: wrap;
+			li {
+				flex-basis: 80px;
+				a {
+					color: #000;
+					text-decoration: none;
+					font-size: 1.35rem;
+					font-weight: 600;
+					margin: 0rem 2rem;
+				}
+			}
+		}
+	}
 
-    div.logMedia {
-        display: flex;
-        // flex-direction: row;
-        div.socialMedia {
-            margin: 3rem 2.5rem;
-            img {
-                width: 5vw;
-                height: 5vw;
-            }
-        }
-    }
+	div.logMedia {
+		display: flex;
+		// flex-direction: row;
+		div.socialMedia {
+			margin: 3rem 2.5rem;
+			img {
+				width: 5vw;
+				height: 5vw;
+			}
+		}
+	}
 }
 
-/* Scrollbar setting */
-/* width */
 ::-webkit-scrollbar {
-    width: 10px;
+	width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+	background: #f1f1f1;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #52abab;
+	background: #52abab;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #004d5f;
+	background: #004d5f;
 }
 
 @media screen and (max-width: 700px) {
-    main {
-        section.second {
-            section.cards {
-                div.card {
-                    img {
-                        width: 40vw;
-                        height: 40vw;
-                    }
-                }
-            }
-        }
-    }
+	main {
+		section.second {
+			section.cards {
+				div.card {
+					img {
+						width: 40vw;
+						height: 40vw;
+					}
+				}
+			}
+		}
+
+		section.backImage {
+			// 關於我們
+			.about_container {
+				.card {
+					.card_caption {
+						top: 10%;
+						transform: translateY(10%);
+					}
+				}
+			}
+
+			//登入
+			.login_box {
+				.text-center {
+					font-size: 20px;
+				}
+			}
+
+			// 聯絡我們
+			.contact {
+				.section-header {
+					padding: 1rem 0;
+					font-size: 1.5rem;
+				}
+				/* Left contact page */
+
+				.form-control,
+				textarea {
+					width: 40vw;
+				}
+
+				.send-button {
+					width: 40vw;
+				}
+
+				.list-item {
+					line-height: 2;
+					font-size: 0.5rem;
+					color: #aaa;
+
+					img {
+						width: 4vw;
+						height: 4vw;
+					}
+				}
+				.copyright {
+					font-size: 0.5rem;
+					margin-top: 0.5rem;
+				}
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 550px) {
-    header {
-        div.logo {
-            margin-left: 0.5rem;
-            img {
-                width: 15vw;
-                height: 15vw;
-            }
-        }
-    }
+	header {
+		div.logo {
+			margin-left: 0.5rem;
+			img {
+				width: 15vw;
+				height: 15vw;
+			}
+		}
+	}
 
-    footer {
-        div.logo {
-            img {
-                width: 15vw;
-                height: 15vw;
-            }
-        }
-        div.logMedia {
-            div.socialMedia {
-                img {
-                    width: 10vw;
-                    height: 10vw;
-                }
-            }
-        }
-    }
+	footer {
+		div.logo {
+			img {
+				width: 15vw;
+				height: 15vw;
+			}
+		}
+		div.logMedia {
+			div.socialMedia {
+				img {
+					width: 10vw;
+					height: 10vw;
+				}
+			}
+		}
+	}
 }
