--- a/Hawaii Project/styles/styles.scss
+++ b/Hawaii Project/styles/styles.scss
@@ -30,8 +30,12 @@ header {
 		flex: 5 1 400px;
 		margin-left: 2rem;
 		img {
+			transition: all 0.5s ease;
+			margin: 0.5rem;
+			padding: 0.15rem;
 			height: 6vw;
 			width: 6vw;
+			border-radius: 35%;
 		}
 	}
 
