--- a/Taiwan Project/styles/styles.css
+++ b/Taiwan Project/styles/styles.css
@@ -15,40 +15,50 @@ h6 {
 }
 
 header {
-  background-color: #c4c4c4;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
   width: 100%;
-  padding: 1rem;
+  top: 0;
+  z-index: 5;
+  background-color: #c4c4c4;
+  transition: all 0.5s ease;
 }
 header .heardTitle {
+  padding: 1rem 0 1rem 1rem;
   font-size: 2.5rem;
 }
 header .heardText {
+  padding: 1rem 0rem 1rem 1rem;
   font-size: 1rem;
 }
-
-nav {
+header nav {
   background-color: #7a7a7a;
+  width: 100%;
+  padding: 0.5rem 0rem;
+  transition: all 0.5s ease;
 }
-nav ul {
+header nav ul {
   display: flex;
-  padding-left: 1rem;
   list-style-type: none;
 }
-nav ul li {
+header nav ul li {
   display: flex;
   padding: 0.1rem 0.5rem;
 }
-nav ul li a {
+header nav ul li a {
   padding: 0.5rem 0.5rem;
   color: rgb(184, 179, 179);
   text-decoration: none;
   font-size: 1.05rem;
   transition: all 0.25s ease;
 }
-nav ul li a:hover {
+header nav ul li a:hover {
   color: white;
 }
-nav ul li .active {
+header nav ul li .active {
   color: white;
 }
 
